# aoc2021-cpp

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
days/: aoc01.cpp  aoc01.h  aoc02.cpp  aoc02.h  aoc03.cpp  aoc03.h  aoc04.cpp  aoc04.h  aoc05.cpp  aoc05.h  aoc06.cpp  aoc06.h  aoc07.cpp  aoc07.h  aoc08.cpp  aoc08.h  aoc09.cpp  aoc09.h  aoc10.cpp  aoc10.h  aoc11.cpp  aoc11.h  aoc12.cpp  aoc12.h
