cmake_minimum_required(VERSION 3.23)
project(aoc21cpp)

set(CMAKE_CXX_STANDARD 23)

add_executable(aoc21cpp main.cpp days/aoc01.cpp days/aoc01.h days/aoc02.cpp days/aoc02.h days/aoc03.cpp days/aoc03.h days/aoc04.cpp days/aoc04.h days/aoc05.cpp days/aoc05.h days/aoc06.cpp days/aoc06.h days/aoc07.cpp days/aoc07.h days/aoc08.cpp days/aoc08.h days/aoc09.cpp days/aoc09.h)
